--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,16 +4,31 @@
     "type": "split",
     "children": [
       {
-        "id": "3c028459e5ae0241",
+        "id": "0a1bb83721690279",
         "type": "leaf",
+        "dimension": 41.96028187059577,
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "JavaScript/210131 Object to primitive coversion.md",
+            "mode": "preview"
+          }
+        },
+        "group": "ec04c0df79994004"
+      },
+      {
+        "id": "497fc412905c0623",
+        "type": "leaf",
+        "dimension": 58.03971812940423,
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/210131 임진왜란.md",
+            "file": "JavaScript/210131 Object to primitive coversion.md",
             "mode": "source"
           }
-        }
+        },
+        "group": "ec04c0df79994004"
       }
     ],
     "direction": "vertical"
@@ -53,7 +68,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 350.0121879577637,
+    "width": 237.01218795776367,
     "collapsed": true
   },
   "right": {
@@ -71,7 +86,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/210131 임진왜란.md",
+                "file": "JavaScript/210131 Object to primitive coversion.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -110,18 +125,18 @@
       }
     ],
     "direction": "horizontal",
-    "width": 387.4532775878906
+    "width": 482.2668762207031
   },
   "lastOpenFiles": [
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/210131 임진왜란.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/210125 위화도회군.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/Untitled.md",
-    "ReadingNote/0.Books.md",
-    "ReadingNote/짧고 굵게 일합니다.md",
+    "JavaScript/210131 Object to primitive coversion.md",
+    "Data Structure/201105 map vs. unordered-map.md",
+    "JavaScript/210119 Object References and Copying.md",
+    "JavaScript/210118 Objects.md",
     "ReadingNote/Books.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md",
-    "ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/Untitled.md",
-    "읽기만 하면  내 것이 되는 1페이지 한국사365.md"
+    "ReadingNote/짧고 굵게 일합니다.md",
+    "JavaScript/210128 Symbol type.md",
+    "JavaScript/Untitled.md",
+    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/사건/210131 임진왜란.md"
   ]
 }
