--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,10 +10,23 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "React/Basics/210131 create-react-app & JSX.md",
+            "file": "React/Basics/210201 Rendering elements.md",
             "mode": "source"
           }
-        }
+        },
+        "group": "849cccd833586655"
+      },
+      {
+        "id": "3aef59847adf1adc",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "React/Basics/210201 Rendering elements.md",
+            "mode": "preview"
+          }
+        },
+        "group": "849cccd833586655"
       }
     ],
     "direction": "vertical"
@@ -40,7 +53,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "tag:#object",
+                "query": "tag:#JavaScript",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -53,7 +66,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 412.0121879577637
+    "width": 412.0121879577637,
+    "collapsed": true
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -70,7 +84,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "React/Basics/210131 create-react-app & JSX.md",
+                "file": "React/Basics/210201 Rendering elements.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,6 +126,7 @@
     "width": 436.0172424316406
   },
   "lastOpenFiles": [
+    "React/Basics/210201 Rendering elements.md",
     "React/Basics/210131 Starting.md",
     "210201 title.md",
     "JavaScript/210201 Methods of primitives.md",
@@ -120,7 +135,6 @@
     "JavaScript/210126 Optional chaining.md",
     "JavaScript/210125 Method and 'this'.md",
     "JavaScript/210125 Constructor, operator 'new'.md",
-    "JavaScript/210120 Garbage Collection.md",
-    "JavaScript/210119 Object References and Copying.md"
+    "JavaScript/210120 Garbage Collection.md"
   ]
 }
