--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "React/Basics/210201 Rendering elements.md",
+            "file": "React/Basics/210201 Rendering Elements.md",
             "mode": "source"
           }
         },
@@ -22,7 +22,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "React/Basics/210201 Rendering elements.md",
+            "file": "React/Basics/210201 Rendering Elements.md",
             "mode": "preview"
           }
         },
@@ -66,8 +66,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 412.0121879577637,
-    "collapsed": true
+    "width": 412.0121879577637
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -84,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "React/Basics/210201 Rendering elements.md",
+                "file": "React/Basics/210201 Rendering Elements.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -126,15 +125,15 @@
     "width": 436.0172424316406
   },
   "lastOpenFiles": [
+    "React/Basics/210201 Rendering Elements.md",
+    "React/Basics/210131 create-react-app & JSX.md",
+    "React/Basics/210201 Components and Props.md",
     "React/Basics/210201 Rendering elements.md",
-    "React/Basics/210131 Starting.md",
     "210201 title.md",
+    "React/Basics/210131 Starting.md",
     "JavaScript/210201 Methods of primitives.md",
     "JavaScript/210131 Object to primitive coversion.md",
     "JavaScript/210128 Symbol type.md",
-    "JavaScript/210126 Optional chaining.md",
-    "JavaScript/210125 Method and 'this'.md",
-    "JavaScript/210125 Constructor, operator 'new'.md",
-    "JavaScript/210120 Garbage Collection.md"
+    "JavaScript/210126 Optional chaining.md"
   ]
 }
