--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,14 +4,14 @@
     "type": "split",
     "children": [
       {
-        "id": "d259e3d707211a03",
+        "id": "840e9414aa711603",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
             "file": "Ruby/Basic Ruby/210203 Basics pt.2.md",
-            "mode": "source"
+            "mode": "preview"
           }
         }
       }
@@ -115,13 +115,13 @@
   "lastOpenFiles": [
     "Ruby/Basic Ruby/210203 Basics pt.2.md",
     "Ruby/Basic Ruby/210201 Basics pt.1.md",
-    "Ruby/Basic Ruby/210201 Basics.md",
-    "210203 title.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/장소/210202 서원.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/인물/210125 정도전.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/인물/210201 이성계.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/장소/210126 경복궁.md",
-    "ReadingNote/Books.md"
+    "Ruby/Basic Ruby/210131 Introduction to objects.md",
+    "Ruby/Basic Ruby/210130 Encoding.md",
+    "Ruby/Basic Ruby/210129 ASCII.md",
+    "Ruby/Basic Ruby/210128 Here documents.md",
+    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/문화/210128 탕평.md",
+    "Math/201018 Euclidean Distance.md",
+    "Math/201018 Chebyshev Distance.md",
+    "Ruby/Basic Ruby/210201 Basics.md"
   ]
 }
