--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "4a2788aef726d247",
+        "id": "0d5ee7e5a7e37a24",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "ReadingNote/짧고 굵게 일합니다.md",
+            "file": "Ruby/Basic Ruby/210204 Data types.md",
             "mode": "preview"
           }
         }
@@ -71,7 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "ReadingNote/짧고 굵게 일합니다.md",
+                "file": "Ruby/Basic Ruby/210204 Data types.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -113,15 +113,15 @@
     "width": 461.2668762207031
   },
   "lastOpenFiles": [
+    "Ruby/Basic Ruby/210204 Data types.md",
+    "210204 title.md",
     "ReadingNote/짧고 굵게 일합니다.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/유적-유물/210204 신라 금관.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/인물/210201 이성계.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/유적-유물/210127 청화백자.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/유적-유물/210204 title.md",
-    "210204 title.md",
     "ReadingNote/Books.md",
-    "JavaScript/210203 Numbers pt.1.md",
-    "210203 title.md"
+    "JavaScript/210203 Numbers pt.1.md"
   ]
 }
