--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,8 +10,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/문화/210205 반민특위.md",
-            "mode": "source"
+            "file": "ReadingNote/짧고 굵게 일합니다.md",
+            "mode": "preview"
           }
         }
       }
@@ -70,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/문화/210205 반민특위.md",
+                "file": "ReadingNote/짧고 굵게 일합니다.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,6 +112,7 @@
     "width": 567.266845703125
   },
   "lastOpenFiles": [
+    "ReadingNote/짧고 굵게 일합니다.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/문화/210205 반민특위.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/문화/210128 탕평.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/학문-철학/210129 성리학.md",
@@ -120,7 +121,6 @@
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/인물/210125 정도전.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/장소/210126 경복궁.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/장소/210202 서원.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/유적-유물/210204 신라 금관.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/유적-유물/210127 청화백자.md"
+    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/유적-유물/210204 신라 금관.md"
   ]
 }
