--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,8 +10,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Ruby/Basic Ruby/210205 title.md",
-            "mode": "source"
+            "file": "Ruby/Basic Ruby/210204 Data types pt.1.md",
+            "mode": "preview"
           }
         }
       }
@@ -53,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 412.0121879577637
+    "width": 412.0121879577637,
+    "collapsed": true
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -70,7 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Ruby/Basic Ruby/210205 title.md",
+                "file": "Ruby/Basic Ruby/210204 Data types pt.1.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,15 +113,15 @@
     "width": 288.36419677734375
   },
   "lastOpenFiles": [
-    "210205 title.md",
+    "Ruby/Basic Ruby/210204 Data types pt.1.md",
+    "Ruby/Basic Ruby/210205 Data types pt.2.md",
+    "Ruby/Basic Ruby/210203 Basics pt.2.md",
     "Ruby/Basic Ruby/210204 Data types.md",
+    "210205 title.md",
     "ReadingNote/짧고 굵게 일합니다.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/문화/210205 반민특위.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/문화/210128 탕평.md",
     "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/학문-철학/210129 성리학.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/인물/210201 이성계.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/인물/210125 정도전.md",
-    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/장소/210126 경복궁.md"
+    "ReadingNote/읽기만 하면  내 것이 되는 1페이지 한국사365/목차.md"
   ]
 }
